# QC-Linear-Algebra

./: CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/headers/math-core/: function-definitions.hpp  variable-definitions.hpp
src/headers/storage-utilities/: storage-utilities.hpp
src/headers/ui-utilities/: general-utilities.hpp  sandbox-manager.hpp  stage-utilities.hpp
src/math-core/: math-objects.hpp
src/storage-utilities/: storage-utilities.cpp  storage-utilities.hpp
src/ui-utilities/: stage-utilities.cpp  stage-utilities.hpp
